--- a/index.html
+++ b/index.html
@@ -122,7 +122,14 @@
                 title: "Giveaway Bot v1.0",
                 description: "A robust Discord bot designed for automating contest management and random prize distribution. Key features include creating giveaways with time limits, automatic winner selection, configurable roles & permissions, and easy setup for self-hosting.",
                 tech: ["Node.js", "Discord.js"],
-                repoLink: `https://github.com/${myGitHubUsername}/botdevelopment`,
+                repoLink: `https://github.com/${myGitHubUsername}/botdevelopment/releases/tag/giveawaybot`,
+                eulaLink: "https://github.com/xrichyxdevalt/botdevelopment?tab=License-1-ov-file" 
+            },
+            {
+                title: "Ticket Bot v1.0 Beta",
+                description: "Ticket creation through buttons Auto-generated private channels Ticket closing system with confirmation Customizable category, permissions, and messages HTML ticket transcripts Multiple ticket panels Ticket open/close logging Admin-only ticket controls Priority levels / ticket tags",
+                tech: ["Node.js", "Discord.js"],
+                repoLink: `https://github.com/${myGitHubUsername}/botdevelopment/releases/tag/ticketbot`,
                 eulaLink: "https://github.com/xrichyxdevalt/botdevelopment?tab=License-1-ov-file" 
             },
         ];
